# argus-core

./: .env.example  .pre-commit-config.yaml  .secrets.baseline  ARGUS.md  CLAUDE.md  CONTRIBUTING.md  DEFERRED.md  Dockerfile  LICENSE  MANIFEST.in  PHASES.md  README.md  REPO_LAYOUT.md  SECURITY.md  argus-run  argus_zd.py  pyproject.toml
.agents/skills/testing-argus/: SKILL.md
.agents/skills/testing-frontend/: SKILL.md
.github/workflows/: ci.yml  publish-redteam.yml  publish.yml
arena/: Dockerfile  __init__.py  base.py  docker-compose.yml  runner.py  scoring.py
arena/scenarios/: __init__.py  arena_01_prompt_leak.py  arena_02_tool_poison.py  arena_03_supply_chain.py  arena_04_memory_poison.py  arena_05_identity_spoof.py  arena_06_context_window.py  arena_07_exfil_relay.py  arena_08_priv_escalation.py  arena_09_race_condition.py  arena_10_model_extraction.py  arena_11_persona_hijack.py  arena_12_memory_boundary.py
argus-frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js
argus-frontend/src/: App.tsx  index.css
argus-frontend/src/api/: client.ts
argus-frontend/src/pages/: AIAgentsPage.tsx  CompletedScanPage.tsx  CompoundChainsPage.tsx  CorpusPage.tsx  DashboardPage.tsx  FindingsPage.tsx  GauntletPage.tsx  LiveScanPage.tsx  LoginPage.tsx  MCPServersPage.tsx  MemoryStoresPage.tsx  MonitoringPage.tsx  OWASPMappingPage.tsx  PendingScanPage.tsx  PipelinesPage.tsx  ScanDetailPage.tsx  SettingsPage.tsx
argus-frontend/src/types/: index.ts
argus_zd/agents/: exploiter.py  sentry.py
argus_zd/layer4/: live_harness.py
benchmark/: LEADERBOARD.md  README.md  RUN_OUTPUT.txt  baseline-findings.json  baseline-score.json  docker-compose.yml  record_web_demo.sh  run_baseline.py  run_cinematic.py  run_live.py  swarm_vs_legacy.py
benchmark/assets/: argus-action.cast
benchmark/official/: LEADERBOARD.md  README.md  rubric.json  run_all.py  score.py
benchmark/official/docs/: findings-format.md
benchmark/official/submit/: submit.py
benchmark/scenarios/01-tool-poisoning/: Dockerfile  docker-compose.yml  known_vuln.md  mcp_server.py  run_scenario.py  target_agent.py
benchmark/scenarios/02-memory-poisoning/: Dockerfile  docker-compose.yml  memory_agent.py  run_scenario.py
benchmark/scenarios/03-identity-spoof/: Dockerfile  docker-compose.yml  known_vuln.md  run_scenario.py  sub_agent.py
benchmark/scenarios/04-privilege-chain/: Dockerfile  docker-compose.yml  known_vuln.md  priv_chain_agent.py  run_scenario.py
benchmark/scenarios/05-injection-gauntlet/: Dockerfile  docker-compose.yml  gauntlet_agent.py  known_vuln.md  run_scenario.py
benchmark/scenarios/06-supply-chain/: Dockerfile  docker-compose.yml  known_vuln.md  run_scenario.py  supply_chain_agent.py
benchmark/scenarios/07-race-condition/: Dockerfile  docker-compose.yml  known_vuln.md  race_agent.py  run_scenario.py
benchmark/scenarios/08-context-window/: Dockerfile  context_window_agent.py  docker-compose.yml  known_vuln.md  run_scenario.py
benchmark/scenarios/09-cross-agent-exfil/: Dockerfile  cross_agent_exfil.py  docker-compose.yml  known_vuln.md  run_scenario.py
benchmark/scenarios/10-model-extraction/: Dockerfile  docker-compose.yml  known_vuln.md  model_extraction_agent.py  run_scenario.py
benchmark/scoring/: rubric.json  score.py
docs/: ADDING_A_LABRAT.md  GETTING_STARTED.md  NO_CHEATING.md  llm-subsystem.md
docs/archive/: PHASES-2026-04-21.md
examples/: crewai-minimal.yaml
legacy/: README.md
legacy/agents/: do_04_denial_of_wallet.py  ea_12_excessive_agency.py  lateral_movement_agent.py  model_extraction_agent.py  persona_hijacking_agent.py  pi_02_prompt_injection.py  race_condition_agent.py  vd_09_vector_analyzer.py
legacy/layer1/: scanner.py
legacy/layer2/: surface_analyzer.py
legacy/layer3/: fuzzer.py
legacy/layer4/: deviation_detector.py
legacy/layer7/: sandbox.py
src/argus/: __init__.py  cli.py  client_safety.py  config.py  entropy.py  rate_limiter.py  tiering.py
src/argus/adapter/: __init__.py  base.py  generic_agent.py  http_agent.py  mcp.py  real_crewai.py  sandboxed_stdio.py  stdio.py
src/argus/adversarial/: typosquat.py
src/argus/agents/: __init__.py  agent_01_prompt_injection.py  agent_03_memory_poisoning.py  agent_04_identity_spoof.py  agent_05_context_window.py  agent_07_privilege_escalation.py  agent_09_supply_chain.py  agent_10_model_extraction.py  agent_11_environment_pivot.py  base.py  context_window.py  cross_agent_exfil.py  ep_08_environment_pivoting.py  identity_spoof.py  mc_15_handoff_auditor.py  mcp_scanner.py  memory_boundary_collapse.py  memory_poisoning.py  model_extraction.py  model_extraction_agent.py  mt_14_morphing_target.py  od_06_orchestration_drift.py  persona_hijacking.py  privilege_escalation.py  prompt_injection.py  race_condition.py  supply_chain.py  tool_poisoning.py  web_probe.py
src/argus/alec/: __init__.py  bridge.py
src/argus/attacks/: judge.py  (+3 more)
src/argus_engine/: __init__.py
tests/: test_a2a_labrat_engagement.py  test_adaptive_adversary.py  test_agent_01_prompt_injection.py  test_agent_03_memory_poisoning.py  test_agent_05_context_window.py  test_agent_07_privilege_escalation.py  test_agent_09_supply_chain.py  test_agent_11_environment_pivot.py  test_agents.py  test_cerberus_alec_stubs.py  test_chain_synthesis_v2.py  test_command_flooding.py  test_conductor.py  test_contracts.py  test_core_readiness_t3_t4_mcp.py  test_corpus.py  test_correlation_v2.py  test_correlator_v1_runtime.py  test_demo_evolver.py  test_demo_generic_agent.py  test_diagnostics_base_agent_priors.py  test_diagnostics_blackboard_loader.py  test_diagnostics_feedback.py  test_diagnostics_swarm_integration.py  test_dynamic_corpus.py  test_engagement_reachability_oob.py  test_entropy.py  test_ep11_broken_resource.py  test_ep11_schema_aware.py  test_evidence.py  test_evolver.py  test_false_positive_gate.py  test_finding_schema.py  test_framework_labrats.py  test_generic_agent_pillar.py  test_harness.py  test_judge_failover.py  test_mcp_attacker_calibration.py  test_mcp_attacker_consensus.py  test_memory_target_class.py  (+32 more)
(+418 files in other folders)
