[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-redteam"
version = "0.4.0"
description = "Autonomous AI Red Team Platform - Core Engine"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic",
    "google-generativeai",
    "anthropic",
    "openai",
    "requests",
    "python-dotenv",
    "networkx",
    "mcp",
    "docker",
    "pyyaml",
    # Security floor pins — block the known-vulnerable transitive
    # versions surfaced by pip-audit 2026-04-21 from reappearing on a
    # fresh install.
    "cryptography>=46.0.7",   # CVE-2026-34073, CVE-2026-39892
    "lxml>=6.1.0",            # CVE-2026-41066
    "pygments>=2.20.0",       # CVE-2026-4539
]
authors = [
  { name="ARGUS Defense", email="security@sixsenseenterprise.com" }
]

[project.scripts]
argus            = "argus.cli:_cli_entry"
argus-pre-commit = "argus.integrations.pre_commit:run_pre_commit"

[project.optional-dependencies]
webhook = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
]

# ── Ruff config ────────────────────────────────────────────────────────────
# We keep ruff's default rule set but waive the two "multiple
# statements on one line" rules — we use that style intentionally in
# compact test helpers and CLI dispatch tables. Everything else stays
# strict.
[tool.ruff.lint]
ignore = [
    "E701",   # multiple statements on one line (colon)
    "E702",   # multiple statements on one line (semicolon)
]
