[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-core"
version = "0.6.3"
description = "Autonomous AI Red Team Platform — Core (OSS tier)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic",
    "google-generativeai",
    "anthropic",
    "openai",
    "requests",
    "python-dotenv",
    "networkx",
    "mcp",
    "docker",
    "pyyaml",
    # Security floor pins — block the known-vulnerable transitive
    # versions surfaced by pip-audit 2026-04-21 from reappearing on a
    # fresh install.
    "cryptography>=46.0.7",   # CVE-2026-34073, CVE-2026-39892
    "lxml>=6.1.0",            # CVE-2026-41066
    "pygments>=2.20.0",       # CVE-2026-4539
    "pytest>=9.0.3",          # CVE-2025-71176
]
authors = [
  { name="ARGUS Defense", email="security@sixsenseenterprise.com" }
]

[project.scripts]
argus            = "argus.cli:_cli_entry"
argus-pre-commit = "argus.integrations.pre_commit:run_pre_commit"

[project.optional-dependencies]
webhook = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
]

# ── Pytest config ──────────────────────────────────────────────────────────
[tool.pytest.ini_options]
# `auto` mode means any `async def test_*` is treated as an asyncio
# test without requiring a per-test `@pytest.mark.asyncio` marker.
# Explicit markers still work and are preferred in new tests.
asyncio_mode = "auto"

# ── Ruff config ────────────────────────────────────────────────────────────
# We keep ruff's default rule set but waive the two "multiple
# statements on one line" rules — we use that style intentionally in
# compact test helpers and CLI dispatch tables. Everything else stays
# strict.
[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "E501",   # line too long — enforced at 120 via line-length above
    "E701",   # multiple statements on one line (colon)
    "E702",   # multiple statements on one line (semicolon)
]
