[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-core"
version = "1.0.0"
description = "Autonomous AI Red Team Platform — Core (OSS tier, substrate-included)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "google-generativeai",
    "anthropic",
    "openai",
    "requests",
    "python-dotenv",
    "networkx",
    "mcp",
    "docker",
    "pyyaml>=6.0",
    # Substrate dependencies — folded in via Φ_Ω of the integration arc
    # (previous home: github.com/Odingard/ARGUS-ENGINE, archived). Trimmed
    # to what substrate actually imports (audit at fold time): the
    # substrate's standalone pyproject also listed sentence-transformers,
    # pillow, and a redundant pyyaml pin, but no module under
    # ``argus.engine.*`` imports them — they are dropped to keep
    # ``pip install argus-core`` lean (~3 GB of torch wheels not pulled).
    "httpx>=0.27",          # argus.engine.recon + transports
    "click>=8.1",           # argus.engine.cli
    "rich>=13.7",           # argus.engine.reporting (HUD cockpit + narrator)
    "pyfiglet>=1.0",        # argus.engine.cli BREACH banner
    # Security floor pins — block the known-vulnerable transitive
    # versions surfaced by pip-audit 2026-04-21 from reappearing on a
    # fresh install.
    "cryptography>=46.0.7",   # CVE-2026-34073, CVE-2026-39892
    "lxml>=6.1.0",            # CVE-2026-41066
    "pygments>=2.20.0",       # CVE-2026-4539
    "pytest>=9.0.3",          # CVE-2025-71176
]
authors = [
  { name="ARGUS Defense", email="security@sixsenseenterprise.com" }
]

[project.scripts]
argus            = "argus.cli:_cli_entry"
argus-pre-commit = "argus.integrations.pre_commit:run_pre_commit"
argus-engine     = "argus.engine.cli:main"

[project.optional-dependencies]
webhook = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
]

# ── Package discovery ──────────────────────────────────────────────────────
# After Φ_Ω substrate fold, src/ ships two top-level packages: ``argus``
# (canonical) and ``argus_engine`` (back-compat shim). Auto-discovery is
# explicit so both reach the wheel.
[tool.setuptools.packages.find]
where = ["src"]
include = ["argus*", "argus_engine*"]

# ── Pytest config ──────────────────────────────────────────────────────────
[tool.pytest.ini_options]
# `auto` mode means any `async def test_*` is treated as an asyncio
# test without requiring a per-test `@pytest.mark.asyncio` marker.
# Explicit markers still work and are preferred in new tests.
asyncio_mode = "auto"

# ── Ruff config ────────────────────────────────────────────────────────────
# We keep ruff's default rule set but waive the two "multiple
# statements on one line" rules — we use that style intentionally in
# compact test helpers and CLI dispatch tables. Everything else stays
# strict.
[tool.ruff]
line-length = 120
# Φ_Ω: requires-python is 3.11; lint against the floor so we don't accept
# 3.12-only syntax that would fail on the minimum supported interpreter.
target-version = "py311"

[tool.ruff.lint]
ignore = [
    "E402",   # module-level import not at top — intentional late/conditional imports
    "E501",   # line too long — enforced at 120 via line-length above
    "E701",   # multiple statements on one line (colon)
    "E702",   # multiple statements on one line (semicolon)
]
